--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -29,7 +29,7 @@
   <!-- Logo -->
    <div class="align-items-center justify-content-center border-dark">
     <a class="navbar-brand d-flex align-items-center mb-3">
-    <img src="assets/logo.PNG" alt="Logo" height="50px" width="200">
+    <img src="assets/logooo.PNG" alt="Logo" height="50px" width="200">
   </a>
    </div>
   
@@ -44,9 +44,7 @@
     <li>
       <a class="nav-link" routerLink="/users" routerLinkActive="active">👥 Users</a>
     </li>
-    <li>
-      <a class="nav-link" routerLink="/units" routerLinkActive="active">🏢 Units</a>
-    </li>
+   
     <li>
       <a class="nav-link" routerLink="/listings" routerLinkActive="active">📢 Listings</a>
     </li>
@@ -55,6 +53,12 @@
     </li>
     <li>
       <a class="nav-link" routerLink="/bookings" routerLinkActive="active">📅 Bookings</a>
+    </li>
+     <li>
+      <a class="nav-link" routerLink="/amenities" routerLinkActive="active">🏢 Amenities</a>
+    </li>
+     <li>
+      <a class="nav-link" routerLink="/categories" routerLinkActive="active">🏢 Categories</a>
     </li>
 
     <!-- Theme Toggle Button -->
