fix(dashboard): fix and stabilize all API integrations

--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -1,6 +1,7 @@
-<footer class="footer text-white py-3 mt-auto"  style="border-top:1px solid black ;">
-   
-  <div class="container text-center" [ngClass]="isDarkMode ? 'bg-black text-light' : 'bg-light text-dark'">
-    <span>&copy; Maskan All reights reserved</span>
-  </div>
-</footer>
+  <footer class="bg-footer text-white text-center py-3">
+    <div class="container">
+      <p class="mb-0">
+        &copy; 2025 <span style="color:#C69963;">Maskan</span>. All rights reserved.
+      </p>
+    </div>
+  </footer>
